[gd_scene load_steps=2 format=3 uid="uid://l5bri0rppr0"]

[ext_resource type="Script" uid="uid://bilfajhyujjhs" path="res://Scripts/settings_menu.gd" id="1_18g2c"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18g2c")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 325.0
offset_top = 200.0
offset_right = 841.0
offset_bottom = 333.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 50.0
value = 50.0

[node name="MuteLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="MuteCheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Back
"

[connection signal="drag_ended" from="PanelContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/MuteCheckBox" to="." method="_on_mute_check_box_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
